<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/basic_settings">
        <CheckBoxPreference
            android:title="@string/no_picture_mode"
            android:key="no_picture_mode"
            android:defaultValue="false"
            android:summary="@string/no_picture_mode_description" />
        <!-- <CheckBoxPreference
            android:title="@string/in_app_browser"
            android:key="in_app_browser"
            android:defaultValue="true"
            android:summary="@string/in_app_browser_description"
            /> -->

        <ListPreference
            android:title="@string/time_of_saving_articles"
            android:key="time_of_saving_articles"
            android:entries="@array/time_to_save_opts"
            android:entryValues="@array/time_to_save_values"
            android:defaultValue="7" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_settings">
        <Preference
            android:title="@string/clear_image_cache"
            android:key="clear_glide_cache" />
    </PreferenceCategory>
</PreferenceScreen>